demo_petstore-ee7/myproject-demo-realizada/mis-yamls/sponsor-postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: sponsor-postgresql
  name: sponsor-postgresql
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: sponsor-postgresql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: sponsor-postgresql
      name: sponsor-postgresql
    spec:
      containers:
        - image: postgres:9.6.5
          imagePullPolicy: Always
          name: sponsor-postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
