demo_petstore-ee7/myproject-demo-realizada/mis-yamls/sponsor-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: sponsor-postgresql
  name: sponsor-postgresql
spec:
  ports:
    - name: port-5432
      port: 5432
      targetPort: 5432
  selector:
    move2kube.konveyor.io/service: sponsor-postgresql
  type: ClusterIP
status:
  loadBalancer: {}
